@@ -1,5 +1,5 @@
 /* 
- * Copyright (C) 2004 Georgy Yunaev tim@krasnogorsk.ru
+ * Copyright (C) 2004-2009 Georgy Yunaev gyunaev@ulduzsoft.com
  *
  * This library is free software; you can redistribute it and/or modify it 
  * under the terms of the GNU Lesser General Public License as published by 
@@ -10,8 +10,6 @@
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
  * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public 
  * License for more details.
- *
- * $Id$
  */
 
 static const char * libirc_strerror[LIBIRC_ERR_MAX] = 
@@ -32,6 +30,7 @@ static const char * libirc_strerror[LIBIRC_ERR_MAX] =
 	"Timeout error",
 	"Could not open file",
 	"IRC session terminated",
+	"IPv6 not supported",
 };
 
 
